--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Carousel Practice</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -20,7 +20,7 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
 
-        <div class="carousel-inner ">
+        <div class="carousel-inner mx-auto w-50">
           <div class="carousel-item active">
             <img src="Images/Blues My Favorite Color Web.png" class="d-block w-100" alt="Blues My Favorite Color">
             <div class="carousel-caption d-none d-md-block">
@@ -71,7 +71,7 @@
             <span class="visually-hidden">Next</span>
           </button>
     </div>
-
+  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
